fixed an issue where the vertical scrollbar created an offset to the line numbers

--- a/public/stylesheets/algo_area.css
+++ b/public/stylesheets/algo_area.css
@@ -71,6 +71,11 @@
     color: #000;
     background-color: transparent;
 }
+/*
+.q_algo::-webkit-scrollbar {
+    height: 30px;
+}
+*/
 
 mark {
     color: transparent;
